--- a/client/src/styles/sass/components/_buttons.scss
+++ b/client/src/styles/sass/components/_buttons.scss
@@ -4,7 +4,7 @@
 
 .button, button {
   display: inline-block;
-  padding: .625em 2.8125em;
+  padding: .625rem 2.8125rem;
   background-color: $background-gray;
   color: $dark-purple;
   font-weight: 700;
