--- a/client/src/styles/sass/layout/_sidebar.scss
+++ b/client/src/styles/sass/layout/_sidebar.scss
@@ -12,4 +12,17 @@ nav {
     // position: relative;
     // z-index: 2;
   }
+
+  ul li a {
+    font-size: 1.125rem;
+    color: $purple-black;
+  }
+}
+
+.month-list {
+  margin-bottom: 3rem;
+  
+  li {
+    padding: .5rem 0;
+  }
 }
