--- a/client/src/styles/sass/components/wine-page/_wine-info.scss
+++ b/client/src/styles/sass/components/wine-page/_wine-info.scss
@@ -9,12 +9,34 @@
     "breadcrumbs content"
     "img content";
 
+  @media (max-width: 568px) {
+    grid-template-areas: 
+      "breadcrumbs"
+      "img"
+      "content";
+    grid-template-columns: repeat(1, 1fr);
+  }
+
   .breadcrumbs {
     grid-area: breadcrumbs;
     padding-top: 1rem;
     padding-left: 2rem;
     position: absolute;
     z-index: 2;
+
+    @media (max-width: 568px) {
+      position: fixed;
+      
+      a {
+        background-color: #fff;
+        padding: .34375rem .5rem;
+        border-radius: 50%;
+
+        .back-text {
+          display: none;
+        }
+      }
+    }
   }
 
   .wine-heading-img-container {
@@ -36,6 +58,20 @@
         max-width: 70%;
         align-self: center;
         justify-self: center;
+      }
+    }
+
+    @media (max-width: 568px) {
+      height: auto;
+      margin-top: 0;
+      position: fixed;
+      top: 0;
+      left: 0;
+
+      .wine-img {
+        img {
+          max-width: 100%;
+        }
       }
     }
     
@@ -70,6 +106,11 @@
           text-decoration: underline;
         }
       }
+
+      @media (max-width: 568px) {
+        display: block;
+        text-align: center;
+      }
     }
 
     .description-row {
@@ -83,7 +124,14 @@
 
     .delete {
         margin-bottom: 2rem;
-      }
+    }
+
+    @media (max-width: 568px) {
+      overflow: visible;
+      position: relative;
+      background-color: #fff;
+      margin-top: 50vh;
+    }
   }
 }
 
