--- a/client/src/styles/sass/components/wine-page/_wine-info.scss
+++ b/client/src/styles/sass/components/wine-page/_wine-info.scss
@@ -1,6 +1,7 @@
 .wine-info {
   height: 100vh;
   width: 100vw;
+  background-color: $background-gray;
   display: grid;
   //grid-template-rows: repeat(auto-fill, minmax(3.5rem, 1fr));
   grid-template-columns: repeat(2, 1fr);
@@ -9,39 +10,16 @@
     "breadcrumbs content"
     "img content";
 
-  @media (max-width: 568px) {
-    grid-template-areas: 
-      "breadcrumbs"
-      "img"
-      "content";
-    grid-template-columns: repeat(1, 1fr);
-  }
-
   .breadcrumbs {
     grid-area: breadcrumbs;
     padding-top: 1rem;
     padding-left: 2rem;
     position: absolute;
     z-index: 2;
-
-    @media (max-width: 568px) {
-      position: fixed;
-      
-      a {
-        background-color: #fff;
-        padding: .34375rem .5rem;
-        border-radius: 50%;
-
-        .back-text {
-          display: none;
-        }
-      }
-    }
   }
 
   .wine-heading-img-container {
     grid-area: img;
-    background-color: $background-gray;
     height: 100vh;
     margin-top: -3.5rem;
     display: flex;
@@ -54,84 +32,127 @@
       justify-content: center;
       align-content: center;
 
-      img {
+      .img {
         max-width: 70%;
         align-self: center;
         justify-self: center;
       }
-    }
 
-    @media (max-width: 568px) {
-      height: auto;
-      margin-top: 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-
-      .wine-img {
-        img {
-          max-width: 100%;
-        }
-      }
+      // img {
+      //   max-width: 70%;
+      //   align-self: center;
+      //   justify-self: center;
+      // }
     }
     
   }
 
-  .wine-content {
+  .wine-content-container {
     grid-area: content;
-    padding-left: 2rem;
     overflow: auto;
 
-    .wine-heading {
-      display: flex;
-      align-items: flex-end;
-      margin-top: 2rem;
-      margin-bottom: 2rem;
+    .wine-content {
+      background-color: #fff;
+      padding-left: 2rem;
+      border-radius: 1rem;
+      margin: 2rem 2rem 2rem 0;
+
+      .wine-heading {
+        //display: flex;
+        //align-items: flex-end;
+        //margin-top: 2rem;
+        margin-bottom: 2rem;
   
-      h1 {
-        line-height: 1;
-        display: inline-block;
-        margin-right: 1rem;
-        margin-bottom: 0;
-      }
+        h1 {
+          line-height: 1;
+          //display: inline-block;
+          padding-top: 1rem;
+          margin-right: 1rem;
+          margin-bottom: 0;
+        }
   
-      .edit-wine-button {
-        padding: 0;
-        border: 0;
-        margin-bottom: 2px;
-        background-color: #fff;
+        .edit-wine-button {
+          padding: 0;
+          border: 0;
+          margin-bottom: 2px;
+          background-color: #fff;
+          min-width: 73px;
   
-        &:hover {
-          box-shadow: none;
-          text-decoration: underline;
+          &:hover {
+            box-shadow: none;
+            text-decoration: underline;
+          }
         }
       }
 
-      @media (max-width: 568px) {
-        display: block;
-        text-align: center;
+      .description-row {
+        margin-bottom: 1.5rem;
+
+        .description-label {
+          color: $purple-gray;
+          font-weight: 700;
+        }
       }
-    }
 
-    .description-row {
-      margin-bottom: 1.5rem;
-
-      .description-label {
-        color: $purple-gray;
-        font-weight: 700;
-      }
-    }
-
-    .delete {
+      .delete {
         margin-bottom: 2rem;
-    }
-
-    @media (max-width: 568px) {
-      overflow: visible;
-      position: relative;
-      background-color: #fff;
-      margin-top: 50vh;
+      }
     }
   }
 }
 
+@media (max-width: 568px) {
+  .wine-info {
+    grid-template-areas: 
+      "breadcrumbs"
+      "img"
+      "content";
+    grid-template-columns: repeat(1, 1fr);
+
+    .breadcrumbs {
+      position: fixed;
+      
+      a {
+        background-color: #fff;
+        padding: .34375rem .5rem;
+        border-radius: 50%;
+
+        .back-text {
+          display: none;
+        }
+      }
+    }
+
+    .wine-heading-img-container {
+      //height: auto;
+      margin-top: 0;
+      
+      //top: 0;
+      //left: 0;
+      height: 100%;
+
+      .wine-img {
+        .img {
+          //position: fixed;
+          max-width: 100%;
+          height: 100%;
+        }
+      }
+    }
+
+    .wine-content-container {
+      overflow: visible;
+      position: relative;
+      background-color: #fff;
+      //margin-top: 50vh;
+
+      .wine-content {
+        margin: 0;
+      
+        .wine-heading {
+          text-align: center;
+        }
+      }
+    }
+  }
+}
