--- a/client/src/styles/sass/components/wine-feed/_wine-feed.scss
+++ b/client/src/styles/sass/components/wine-feed/_wine-feed.scss
@@ -16,3 +16,24 @@
   flex-wrap: wrap;
   align-content: flex-start;
 }
+
+@media (max-width: 960px) {
+  .wine-card-group {
+    flex-wrap: nowrap;
+    overflow-x: scroll;
+    overflow-y: visible;
+    padding-bottom: 1rem;
+  }
+}
+
+@media (max-width: 700px) {
+  .wine-feed section {
+    h2 {
+      margin-top: 0;
+    }
+
+    .wine-card-group a:last-child {
+      margin-right: 1rem;
+    }
+  }
+}
