--- a/client/src/styles/sass/components/dashboard/_dashboard.scss
+++ b/client/src/styles/sass/components/dashboard/_dashboard.scss
@@ -8,14 +8,33 @@
   display: flex;
   background-color: $background-gray;
 
-  nav {
+  header {
     //grid-area: sidebar;
-    flex: 0 0 188px;
+    flex: 0 0 180px;
   }
 
   main {
     //grid-area: main;
     flex: 1 1 auto;
     overflow: auto;
+
+    .mobile-header {
+      display: none;
+    }
+  }
+}
+
+@media (max-width: 700px) {
+  .grid-container main .mobile-header {
+    display: flex;
+    padding: 1rem;
+
+    .open-menu {
+      padding-right: 1rem;
+    }
+
+    .logo-img {
+      max-height: 33px;
+    }
   }
 }
