--- a/client/src/styles/sass/layout/_sidebar.scss
+++ b/client/src/styles/sass/layout/_sidebar.scss
@@ -1,16 +1,18 @@
-nav {
+header {
   //grid-area: sidebar;
   padding: 40px;
   //max-width: 188px;
   background-color: #fff;
   //height: 100vh;
+  position: relative;
   
   .logo-img {
     max-height: 33px;
     margin-bottom: 30px
-    // margin-top: 2em;
-    // position: relative;
-    // z-index: 2;
+  }
+
+  .close-menu {
+    display: none;
   }
 
   ul li a {
@@ -24,5 +26,29 @@ nav {
   
   li {
     padding: .5rem 0;
+  }
+}
+
+@media (max-width: 700px) {
+  header {
+    //display: none;
+    margin-left: -260px;
+    transition: 0.5s;
+    margin-right: 0;
+    z-index: 2;
+
+    &.sidebar-open {
+      margin-left: 0;
+      margin-right: -260px;
+    }
+
+    .close-menu {
+      display: block;
+      color: $purple-black;
+      padding: 1rem;
+      position: absolute;
+      top: 0;
+      right: 0;
+    }
   }
 }
