--- a/client/src/styles/main.css
+++ b/client/src/styles/main.css
@@ -519,6 +519,7 @@ p {
 
 .bg-image {
   height: 100vh;
+  min-height: 568px;
   background-image: url("../images/home_bg.png");
   background-size: cover;
   background-position: center;
